--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,6 @@ author:
   name: "Your Name"
   links:
     - label: "GitHub"
-      url: "https://github.com/YOUR-USERNAME"
+      url: "https://github.com/lancenicholls"
     - label: "LinkedIn"
-      url: "https://www.linkedin.com/in/YOUR-HANDLE/"
+      url: "https://www.linkedin.com/in/lance-nicholls-0421561b4/"
