--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Your Name"
 description: "Engineer | Biomechanics | Footwear | Data"
-url: "https://YOUR-USERNAME.github.io" # update to your custom domain later
+url: "https://lancenicholls.github.io" # update to your custom domain later
 theme: null
 remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 
