--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,17 @@
 title: "Lance Nicholls"
-description: "Engineer | Biomechanics | Footwear | Data"
-url: "https://lancenicholls3.github.io"   # update to https://yourname.com after adding a CNAME
+description: "Mechanical Engineering • Biomechanics • Running"
+url: "https://YOUR-USERNAME.github.io"
 theme: null
 remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 
-# Optional: pick a Minimal Mistakes skin
-# minimal_mistakes_skin: default
+markdown: kramdown
+kramdown: { input: GFM }
+plugins:
+  - jekyll-include-cache
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-archives
 
-# Navigation
 navigation:
   - title: "Projects"
     url: /projects/
@@ -16,25 +20,16 @@ navigation:
   - title: "About"
     url: /about/
 
-# Collections for project pages
 collections:
   projects:
     output: true
     permalink: /projects/:title/
 
-# Defaults
 defaults:
-  - scope:
-      path: ""
-      type: "projects"
-    values:
-      layout: single
-      author_profile: false
-  - scope:
-      path: ""
-    values:
-      layout: single
-      author_profile: false
+  - scope: { path: "", type: "projects" }
+    values: { layout: single, author_profile: false }
+  - scope: { path: "" }
+    values: { layout: single, author_profile: false }
 
 # Build settings
 markdown: kramdown
