--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Lance Nicholls"
 description: "Mechanical Engineering • Biomechanics • Running"
-url: "https://YOUR-USERNAME.github.io"
+url: "https://lancenicholls3.github.io"
 theme: null
 remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 
