--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,17 @@
 main:
   - title: "About"
-    url: /        # homepage
+    url: /
   - title: "Projects"
     url: /projects/
+    children:
+      - title: "Spine Model Force System"
+        url: /projects/spine-model-force-system/
+      - title: "Screw Removal Tool Redesign"
+        url: /projects/screw-removal-tool/
+      - title: "Precision Machined Stirling Engine"
+        url: /projects/stirling-engine/
+      - title: "Screw Loading Module"
+        url: /projects/screw-loading-module/
   - title: "Resume"
     url: /resume/
+
