--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: ""                               # <-- IMPORTANT: empty for user sites
 theme: null
 remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin: default
-
+custom_css: "/assets/css/custom.css"
 
 markdown: kramdown
 kramdown: { input: GFM }
